# Navix

./: .gitignore  README.md  dev.sh  onboard.sh
backend/: Cargo.toml
backend/src/: auth.rs  chat.rs  errors.rs  main.rs  middleware.rs  models.rs  trips.rs
client/: index.html  package-lock.json  package.json
client/src/: App.tsx  index.css
client/src/components/: CalendarView.tsx  ItineraryList.tsx  StatCard.tsx  UnifiedChat.tsx  VoiceAgent.tsx
client/src/contexts/: TripContext.tsx
client/src/hooks/: useGlobalSettings.ts  useTripState.ts
client/src/pages/: AuthPage.tsx  CalendarPage.tsx  GlobalSettings.tsx  SettingsPage.tsx  TripDetailsPage.tsx  TripListPage.tsx
client/src/services/: api.ts
frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/app/: page.tsx
frontend/src/components/: auth-provider.tsx  bookings-panel.tsx  chat-panel.tsx  expenses-panel.tsx  itinerary-board.tsx  state-change-log.tsx  top-bar.tsx  trip-overview.tsx  trip-workspace.tsx  trips-dashboard.tsx
frontend/src/components/auth/: auth-form.tsx
frontend/src/lib/: api-client.ts  auth-storage.ts  demo-session.ts  trip-local-store.ts  types.ts
server/: go.mod  go.sum  main.go
server/db/: auth_repo.go  db.go  events_repo.go  media_repo.go  messages_repo.go  trips_repo.go
server/handlers/: auth.go  calendar.go  chat.go  trips.go
server/mcp/: tools.go
server/models/: models.go
server/services/: gemini.go  google_calendar.go  ingestion.go  video_fetcher.go
(+1 files in other folders)
