[package]
name = "navix-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum            = { version = "0.7", features = ["macros"] }
tokio           = { version = "1",   features = ["full"] }
serde           = { version = "1",   features = ["derive"] }
serde_json      = "1"
sqlx            = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
tower-http      = { version = "0.5", features = ["cors"] }
jsonwebtoken    = "9"
argon2          = "0.5"
reqwest         = { version = "0.11", features = ["json"] }
anyhow          = "1"
dotenvy         = "0.15"
uuid            = { version = "1",   features = ["v4", "serde"] }
chrono          = { version = "0.4", features = ["serde"] }
async-trait     = "0.1"
